--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   timer_count_down: ^2.2.0
+  counter_button: ^1.0.1
 
 dev_dependencies:
   flutter_test:
