--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   timer_count_down: ^2.2.0
   counter_button: ^1.0.1
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
